# D3D12TranslationLayer

./: CMakeLists.txt  CONTRIBUTING.md  README.md  packages.config
.github/workflows/: prBuild.yml
DxbcParser/: CMakeLists.txt
DxbcParser/include/: BlobContainer.h  pch.h
DxbcParser/src/: BlobContainer.cpp  DXBCUtils.cpp
include/: Allocator.h  BatchedContext.hpp  BatchedQuery.hpp  BatchedResource.hpp  BlitHelper.hpp  BlitHelperShaders.h  BlobContainer.h  BlockAllocators.h  BlockAllocators.inl  CommandListManager.hpp  D3D12TranslationLayerDependencyIncludes.h  D3D12TranslationLayerIncludes.h  DXBCUtils.h  DXGIColorSpaceHelper.h  DeviceChild.hpp  DxbcBuilder.hpp  Fence.hpp  FormatDesc.hpp  ImmediateContext.hpp  ImmediateContext.inl  MaxFrameLatencyHelper.hpp  PipelineState.hpp  PrecompiledShaders.h  Query.hpp  Residency.h  Resource.hpp  ResourceBinding.hpp  ResourceCache.hpp  ResourceState.hpp  RootSignature.hpp  Sampler.hpp  Sampler.inl  Shader.hpp  Shader.inl  ShaderBinary.h  SharedResourceHelpers.hpp  SubresourceHelpers.hpp  SwapChainHelper.hpp  SwapChainManager.hpp  ThreadPool.hpp  (+15 more)
scripts/: BlitHelperShaders.hlsl  CompileBlitHelperShaders.cmd  CompileVideoProcessShaders.cmd  DeinterlaceShader.hlsl
src/: Allocator.cpp  BatchedContext.cpp  BlitHelper.cpp  BlobContainer.cpp  CMakeLists.txt  ColorConvertHelper.cpp  CommandListManager.cpp  DXBCUtils.cpp  DeviceChild.cpp  DxbcBuilder.cpp  Fence.cpp  FormatDescImpl.cpp  ImmediateContext.cpp  Main.cpp  MaxFrameLatencyHelper.cpp  PipelineState.cpp  Query.cpp  Residency.cpp  Resource.cpp  ResourceBinding.cpp  ResourceCache.cpp  ResourceState.cpp  RootSignature.cpp  Shader.cpp  ShaderBinary.cpp  ShaderParser.cpp  SharedResourceHelpers.cpp  SubresourceHelpers.cpp  SwapChainHelper.cpp  SwapChainManager.cpp  Util.cpp  VideoDecode.cpp  VideoDecodeStatistics.cpp  VideoDevice.cpp  VideoProcess.cpp  VideoProcessEnum.cpp  VideoReferenceDataManager.cpp  View.cpp
